--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="shortcut icon" href="icons/curso_git.png" type="image/x-icon">
-    <title>Curso Git</title>
+    <title>Curso Git - PyJa</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="arbol" id="arbol"></div>
-    <script src="script.js"></script>
+    <header>
+        <h1>Curso Git - PyJa</h1>
+    </header>
+    <main>
+        <div class="arbol" id="arbol"></div>
+    </main>
+    <footer>
+        &copy; Todos los derechos reservados 2025 - JeironPro
+    </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
