mejoras en la legibilidad del contenido

--- a/html/pruebafinal.html
+++ b/html/pruebafinal.html
@@ -17,7 +17,7 @@
     <main class="contenedor-git">
         <section class="seccion-git">
             <article class="iteracion">
-                <div>
+                <div class="pasos">
                     <ol class="lista-prueba-final">
                         <li>
                             <span>git init - Crear un nuevo repositorio local</span>
@@ -145,7 +145,7 @@ git config --global user.email "tu@email.com"</code></pre>
                 </div>
             </article>
             <article class="iteracion">
-                <div>
+                <div class="pasos">
                     <ol start="17" class="lista-prueba-final">
                         <li>
                             <span>git revert - Deshacer un commit creando uno nuevo</span>
