--- a/html/primerospasos.html
+++ b/html/primerospasos.html
@@ -18,7 +18,7 @@
         <section class="seccion-git">
             <article class="definicion-comandos">
                 <h2><span class="material-symbols-outlined">developer_guide</span>Intrucciones</h2>
-                <div>
+                <div class="pasos">
                     <p>Instalación de git</p>
                     <ul>
                         <li>sudo apt install git (Ubuntu)</li>
@@ -44,7 +44,7 @@
             </article>
             <article class="iteracion">
                 <h3><span class="material-symbols-outlined">key</span>Conexión SSH entre Git y GitHub</h3>
-                <div>
+                <div class="pasos">
                     <ul>
                         <li>
                             <span>En tu terminal:</span>
